# alpha-forge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README.zh-CN.md  USEME.md  docker-compose.yml  pyproject.toml
constraints/: py311.txt
docs/: README.md  estimates-v1-family.md  learned-representations-v1-family.md  macro-v1-family.md  microstructure-family.md  microstructure-v3-family.md  options-v1-family.md  ownership-v1-family.md  text-event-alpha-scope.md  text-event-v2-family.md
docs/architecture/: adr-004-per-category-eligibility-thresholds.md  adr-010-gru-sequence-ranker.md  adr-011-live-pv-formulaic-feature-port.md  adr-012-d-pca-live-production-port.md  adr-013-operator-console-ui.md  adr-014-unified-engine-runtime.md  platform-conventions.md  production-roadmap.md  qlib-adoption-map.md  risk-register.md  service-boundaries.md  source-audit-checklist.md  system-overview.md  v2-execution-flow.md
docs/interfaces/: core-contracts.md
docs/research/: construction-cost-framework.md
docs/runbooks/: alpha-improvement-rollout.md  alpha-paper-enablement.md  backtest-tearsheet-review.md  backup-restore-and-migrations.md  backup-restore.md  broker-circuit-breaker-recovery.md  cash-account-rules.md  current-alpha-durable-campaign.md  database-failover-recovery.md  disaster-recovery.md  distributed-lock-operations.md  event-bus-retention.md  feature-audit-pipeline.md  hardening-sprint-verification.md  ib_gateway_operations.md  ingest-and-backfill.md  kill-switch-recovery.md  llm-text-feature-promotion.md  local-online-testing.md  model-registry-promotions.md  observability-alertmanager.md  operator_rbac.md  paper-soak-watchdog.md  production-deployment.md  redis-streams-event-bus.md  secrets-and-artifacts.md  secrets-rotation.md  single-vps-industrial-readiness.md  stale-data-recovery.md  startup-and-migrations.md  strict-adv-liquidity-rollout.md
infra/artifacts/learned_pca/: pca_d_artifact.json  pca_d_manifest.json
infra/config/: live_contracts.example.json  paper_alpha.env  paper_budgets.json  paper_contracts.json  sec_cik_map.json  settings.example.env  universe_300.json
infra/config/feature_families/: paper-alpha-catalyst-v10.json  paper-alpha-composite-v1.json  paper-alpha-event-reaction-v2.json  paper-alpha-intraday-microstructure-v2.json
infra/config/profiles/: live_llm_paper.env.example
infra/observability/: alertmanager-rules.yml  prometheus.yml
scripts/: alert_failures.py  backfill_stale_bars.py  backtest_latest_stack.py  backup_durable.py  backup_postgres.sh  build_cik_map.py  build_live_pca_artifact.py  build_sharadar_ticker_map.py  build_universe.py  build_universe_curated.py  calibrate_eligibility_thresholds.py  check_composition_complexity.py  check_composition_layering.py  check_generated_artifacts.py  check_import_boundaries.py  check_lint_debt.py  check_module_size.py  check_research_service_layout.py  check_secrets.py  check_service_bootstrap_coupling.py  check_service_coupling.py  check_type_debt.py  deploy.ps1  deploy.sh  extract_status.py  install_ibapi.ps1  install_ibapi.sh  kill_switch_admin.py  live_ibkr_probe.py  local_backup_drill.sh  migrate_bars_split_frequency.py  mine_alphas.py  promote_alphas.py  promote_latest_stack_arm.py  pull_sharadar_sf1.py  resolve_universe_con_ids.py  restore_postgres.sh  serve_api_native.ps1  serve_api_native.sh  setup.ps1  (+7 more)
src/quant_platform/: __init__.py  __main__.py  config.py  config_api.py  config_broker.py  config_data.py  config_governance_models.py  config_logging.py  config_platform.py  config_storage.py  session.py
src/quant_platform/alembic/: env.py
src/quant_platform/application/: __init__.py
src/quant_platform/cli/: __init__.py
tests/: conftest.py  ibkr_paper_safety.py
tests/e2e/: conftest.py  test_full_live_cycle.py
tests/integration/: conftest.py  test_broker_reconnect.py  test_broker_supervision_flow.py  test_cash_control_loop.py  test_cash_drift_halt.py  test_coordinator_durable_restart.py  test_distributed_lock_durable.py  test_durable_backends.py  test_factor_pipeline.py  test_fundamentals_sharadar_conformance.py  test_ib_paper_session_factory.py  test_lock_lease_loss.py  test_migrations.py  test_paper_trading_flow.py  test_postgres_audit_sink.py  test_postgres_kill_switch_store.py  test_postgres_order_repository.py  test_postgres_performance_repository.py  test_postgres_position_repository.py  test_postgres_settlement_store_durable.py  test_redis_event_bus_durable.py  test_redis_pacing_store_durable.py  test_shadow_text_scoring.py  test_signal_to_execution_flow.py  test_strategy_cycle.py  test_strict_adv_rollout.py
tests/live/: test_ib_gateway_lifecycle.py  test_ib_gateway_order_lifecycle.py  test_ib_gateway_paper_gate_live.py  test_ib_gateway_paper_order.py  test_ib_gateway_smoke.py
tests/unit/: conftest.py  test_account_orchestrator_helpers.py  test_alpha_ensemble.py  test_alpha_forecast_ops.py  test_alpha_governance.py  test_application_contracts.py  test_approve_orders_controller.py  test_architecture_boundaries.py  test_artifact_store.py  test_attribution.py  test_bootstrap_runtime_repositories.py  test_broker_capabilities.py  test_broker_data_sync.py  test_broker_gateway_cancel.py  test_broker_gateway_reconnect.py  test_broker_paper_gate.py  test_broker_port_resolution.py  test_calibration_loader.py  test_cash_ledger.py  test_cash_ledger_buy_t1.py  test_classical_manifest.py  test_cli_entrypoint.py  test_cli_inputs.py  test_cli_migrations.py  test_composition_complexity_check.py  test_composition_layering.py  test_config.py  test_daily_ingest_qc.py  test_data_health.py  test_data_maintenance_scheduler.py  test_dataset_quorum.py  test_distributed_lock.py  test_diversifying_factors.py  test_durable_kill_switch.py  test_edge_case_validation.py  test_engine_feature_dataset_guard.py  test_engine_feature_job_runtime.py  test_engine_feature_schema_guard.py  test_engine_initialization_wiring.py  test_engine_live_runtime.py  (+105 more)
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
(+1085 files in other folders)
